[gd_scene load_steps=10 format=2]

[ext_resource path="res://nodes/UI/SpeechBubble/SpeechBubble.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/speech_bubble/normal_bubble.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/speech_bubble/think_bubble.png" type="Texture" id=3]
[ext_resource path="res://fonts/MonospaceTypewriter.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/choice_bubble/choice_bubble_iddle.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/speech_bubble/dialog_close.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/speech_bubble/dialog_continue.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="SpeechBubble" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 311.0
margin_top = 226.0
margin_right = -713.0
margin_bottom = -374.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
normal_bubble = ExtResource( 2 )
think_bubble = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -132.0
margin_right = 261.0
margin_bottom = 144.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 526, 296 )
patch_margin_left = 150
patch_margin_top = 45
patch_margin_right = 25
patch_margin_bottom = 160
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -125.0

[node name="Text" type="Label" parent="Background/MarginContainer"]
margin_right = 458.0
margin_bottom = 131.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LINE 1
LINE 2
LINE 3
LINE 4
LINE 5"
valign = 1
autowrap = true
max_lines_visible = 5

[node name="NameRect" type="NinePatchRect" parent="Background"]
margin_left = 75.0
margin_top = -30.0
margin_right = 275.0
margin_bottom = 20.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 97, 120 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="Background/NameRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jonh"
align = 1
valign = 1

[node name="ActionIndicators" type="Control" parent="Background"]
margin_left = 465.0
margin_top = 155.0
margin_right = 485.0
margin_bottom = 175.0
__meta__ = {
"_edit_group_": true
}

[node name="CloseArrow" type="TextureRect" parent="Background/ActionIndicators"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 6 )

[node name="ContinueArrow" type="TextureRect" parent="Background/ActionIndicators"]
margin_left = 0.69928
margin_top = 1.04893
margin_right = 18.6993
margin_bottom = 19.0489
texture = ExtResource( 7 )

[node name="ActionTween" type="Tween" parent="."]
repeat = true
playback/repeat = true
